--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link href="http://fonts.cdnfonts.com/css/sofia-pro" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/sofia-pro" rel="stylesheet" />
+    <link href="../src/index.css" rel="stylesheet" />
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,8 +26,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Kanban Board </title>
-    <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/notes-icon.jpeg">
+    <title>Kanban Board</title>
+    <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/notes-icon.jpeg" />
   </head>
   <body>
     <noscript></noscript>
